jest-error.txt
node.exe : FAIL tests/phase2.test.ts
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" "C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpe 
   cified: (FAIL tests/phase2.test.  
  ts:String) [], RemoteException
    + FullyQualifiedErrorId : Native 
   CommandError
 
   Test suite failed to run

    Jest encountered an unexpected 
token

    Jest failed to parse a file. 
This happens e.g. when your code or 
its dependencies use non-standard 
JavaScript syntax, or when Jest is 
not configured to support such 
syntax.

    Out of the box Jest supports 
Babel, which will be used to 
transform your files into valid JS 
based on your Babel configuration.

    By default "node_modules" folder 
is ignored by transformers.

    Here's what you can do:
      If you are trying to use 
ECMAScript Modules, see https://jestj
s.io/docs/ecmascript-modules for how 
to enable it.
      If you are trying to use 
TypeScript, see https://jestjs.io/doc
s/getting-started#using-typescript
      To have some of your 
"node_modules" files transformed, 
you can specify a custom 
"transformIgnorePatterns" in your 
config.
      If you need a custom 
transformation specify a "transform" 
option in your config.
      If you simply want to mock 
your non-JS modules (e.g. binary 
assets) you can stub them out with 
the "moduleNameMapper" config option.

    You'll find more details and 
examples of these config options in 
the docs:
    
https://jestjs.io/docs/configuration
    For information about custom 
transformations, see:
    https://jestjs.io/docs/code-trans
formation

    Details:

    C:\Users\user\Desktop\work\snbl\s
avegoal-backend\node_modules\better-a
uth\dist\integrations\node.mjs:1
    ({"Object.<anonymous>":function(m
odule,exports,require,__dirname,__fil
ename,jest){import { toNodeHandler 
as toNodeHandler$1 } from 
"better-call/node";
                                     
                                     
            ^^^^^^

    SyntaxError: Cannot use import 
statement outside a module

    [0m [90m 1 |[39m 
[36mimport[39m { 
[33mRouter[39m[33m,[39m 
[33mRequest[39m[33m,[39m 
[33mResponse[39m } [36mfrom[39m 
[32m'express'[39m[33m;[39m
    [31m[1m>[22m[39m[90m 2 
|[39m [36mimport[39m { 
toNodeHandler } [36mfrom[39m [32m'
better-auth/node'[39m[33m;[39m
     [90m   |[39m 
[31m[1m^[22m[39m
     [90m 3 |[39m [36mimport[39m 
{ auth } [36mfrom[39m 
[32m'./auth.js'[39m[33m;[39m
     [90m 4 |[39m
     [90m 5 |[39m [36mconst[39m 
router [33m=[39m 
[33mRouter[39m()[33m;[39m[0m

      at 
Runtime.createScriptFromCode (node_mo
dules/jest-runtime/build/index.js:150
5:14)
      at Object.<anonymous> 
(src/modules/auth/auth.routes.ts:2:1)
      at Object.<anonymous> 
(src/api/server.ts:15:1)
      at Object.<anonymous> 
(tests/phase2.test.ts:2:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.391 s
Ran all test suites matching 
/tests\\phase2.test.ts/i.
[06:21:49 UTC] [32mINFO[39m: [36m Redis connected[39m
Jest did not exit one second after 
the test run has completed.

'This usually means that there are 
asynchronous operations that weren't 
stopped in your tests. Consider 
running Jest with 
`--detectOpenHandles` to 
troubleshoot this issue.
